Fix waybar mode text not being visible

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -40,7 +40,7 @@ window#waybar.hidden {
 }
 
 #mode {
-    background-color: #557174;
+    background-color: #98ddca;
 }
 
 #custom-swayscratch {
